[Home]

Summary:ASTERISK-30117: pbx_lua: Remove compiler warnings
Reporter:Boris P. Korzun (drtr0jan)Labels:
Date Opened:2022-06-24 06:07:52Date Closed:2022-07-06 16:02:02
Priority:MinorRegression?No
Status:Closed/CompleteComponents:PBX/pbx_lua
Versions:16.27.0 18.13.0 19.5.0 Frequency of
Occurrence
Constant
Related
Issues:
Environment:FreeBSD 13/stableAttachments:
Description:There're warnings while building pbx_lua.c:
{noformat}
pbx_lua.c:1138:42: warning: comparison of integers of different signs: 'unsigned long' and 'long' [-Wsign-compare]
       if (fread(data, sizeof(char), *size, f) != *size) {
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~~
pbx_lua.c:1538:16: warning: comparison of integers of different signs: 'int' and 'unsigned long' [-Wsign-compare]
       for (i = 1; i < lua_rawlen(L, context_order_table) + 1; i++) {
                   ~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings generated.
{noformat}
Comments:By: Asterisk Team (asteriskteam) 2022-06-24 06:07:53.692-0500

Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed.

A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report.

Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process].

Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur.

Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/].

By: Friendly Automation (friendly-automation) 2022-07-06 16:02:03.021-0500

Change 18688 merged by Friendly Automation:
pbx_lua: Remove compiler warnings

[https://gerrit.asterisk.org/c/asterisk/+/18688|https://gerrit.asterisk.org/c/asterisk/+/18688]

By: Friendly Automation (friendly-automation) 2022-07-06 16:04:16.277-0500

Change 18726 merged by Friendly Automation:
pbx_lua: Remove compiler warnings

[https://gerrit.asterisk.org/c/asterisk/+/18726|https://gerrit.asterisk.org/c/asterisk/+/18726]

By: Friendly Automation (friendly-automation) 2022-07-06 16:04:41.959-0500

Change 18724 merged by Friendly Automation:
pbx_lua: Remove compiler warnings

[https://gerrit.asterisk.org/c/asterisk/+/18724|https://gerrit.asterisk.org/c/asterisk/+/18724]

By: Friendly Automation (friendly-automation) 2022-07-06 16:06:17.801-0500

Change 18725 merged by Friendly Automation:
pbx_lua: Remove compiler warnings

[https://gerrit.asterisk.org/c/asterisk/+/18725|https://gerrit.asterisk.org/c/asterisk/+/18725]